fixed first bug navigation is visible

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ header ul li a {
   font-weight: 500;
   letter-spacing: 1px;
   text-decoration: none;
-  font-size: 18px;
+ font-size: 18px;
 }
 
 .content:imgBox
@@ -183,6 +183,10 @@ margin-left: -5000%;
   display: none;
 
   }
+  header ul li a{
+  font-size: 1.5em;
+  margin: 5px 0;
+  }
   section{
   padding: 20px 20px 120px;
   }
@@ -229,7 +233,7 @@ margin-left: -5000%;
     }
 
   .toggle{
-   position relative;
+   position: relative;
    width: 30px;
    height: 30px;
    cursor: pointer;
@@ -238,10 +242,31 @@ margin-left: -5000%;
    background-position: center;
    background-repeat: no-repeat;
    filter: invert(1);
+   z-index:11;
+
   }
 
   .toggle .active{
+  position: fixed;
+  right: 20px;
+  background: url(close.png);
+  background-size: 25px;
+  background-position: center;
+  background-repeat: no repeat;
+  }
 
+   header ul.navigation.active {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   background: #fff;
+   z-index:10;
   }
 }
 
